Remove unused apis from swagger
